kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ams-nginx
  labels:
    app: ams-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ams-nginx
  template:
    metadata:
      labels:
        app: ams-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: ams-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: ams-nginx
spec:
  selector:
    app: ams-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
